fixed layout problem

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -2,10 +2,6 @@
   display: flex;
   justify-content: space-around;
   padding: 24px 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   width: 500px;
   margin: 0 auto;
   background: #2d9cdb;
